--- a/www/css/global.css
+++ b/www/css/global.css
@@ -8,11 +8,14 @@ body {
   -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
   -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
   -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
+  user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
   font-family: system-ui, -apple-system, -apple-system-font, "Segoe UI", Roboto, sans-serif;
-  font-size: 12px;
+  font-size: 1.5rem;
   height: 100vh;
   width: 100vw;
   margin: 0 !important;
+  background-color: white;
+  color: black;
 }
 
 body * {
