--- a/www/css/charsheet/charsheet.css
+++ b/www/css/charsheet/charsheet.css
@@ -14,3 +14,16 @@ nav {
   background-color: black !important;
   color: white !important;
 }
+
+/* label underline focus color */
+.input-field input:focus,
+.input-field textarea:focus {
+  border-bottom: 1px solid white !important;
+  box-shadow: 0 1px 0 0 white !important;
+}
+
+/* label focus color */
+.input-field input:focus + label,
+.input-field textarea:focus + label {
+  color: white !important;
+}
