--- a/www/css/common/component/container.css
+++ b/www/css/common/component/container.css
@@ -2,4 +2,15 @@
 .container > .content {
   width: 100%;
   height: 100%;
+  gap: var(--half-pad);
+}
+
+.container > .content.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container > .content.column {
+  display: flex;
+  flex-direction: column;
 }
